# crud

./: api_exemplo.py  desafio.db  exemplo01.py  main.py  meubanco.db  pyproject.toml
