[project]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan maieski"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.24,<0.0.25)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
