[project]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan maieski"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
